tests/invalid/wrong_covariance.stderr
error[E0308]: mismatched types
  --> $DIR/wrong_covariance.rs:13:1
   |
13 | self_cell!(NoCov, {}, from, String, NotCovariant, covariant);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected struct `NotCovariant<'y>`
              found struct `NotCovariant<'x>`
note: the lifetime `'y` as defined on the function body at 229:43...
  --> $DIR/wrong_covariance.rs:13:1
   |
13 | self_cell!(NoCov, {}, from, String, NotCovariant, covariant);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...does not necessarily outlive the lifetime `'x` as defined on the function body at 229:35
  --> $DIR/wrong_covariance.rs:13:1
   |
13 | self_cell!(NoCov, {}, from, String, NotCovariant, covariant);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
